--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>EKAM’S FASTPAGES BLOG</p>
+        <div class="home"><p>$high-emph: rgba(white, 0.87); // Colour 1 -&gt; White
+$med-emph: rgba(white, 0.69); //Noice
+$low-emph: rgba(white, 0.38);
+$dark-grey : #121212; // Colour 2
+$overlay: mix($dark-grey, white, 95%);
+$overlay-light: mix($dark-grey, white, 86%);</p>
+
+<p>EKAM’S FASTPAGES BLOG</p>
 
 <h1 id="posts">Posts</h1>
 
