--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@ search_exclude: true
 image: images/logo.png
 ---
 
-$high-emph: rgba(white, 0.87); // Colour 1 -> White
-$med-emph: rgba(white, 0.69); //Noice
-$low-emph: rgba(white, 0.38);
-$dark-grey : #121212; // Colour 2
-$overlay: mix($dark-grey, white, 95%);
-$overlay-light: mix($dark-grey, white, 86%);
-
-EKAM'S FASTPAGES BLOG 
+# EKAM'S FASTPAGES BLOG 
 
 
 
