deploy: 64edcf02d5671a269882bf2240c052fe275f974e

--- a/index.html
+++ b/index.html
@@ -71,14 +71,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>$high-emph: rgba(white, 0.87); // Colour 1 -&gt; White
-$med-emph: rgba(white, 0.69); //Noice
-$low-emph: rgba(white, 0.38);
-$dark-grey : #121212; // Colour 2
-$overlay: mix($dark-grey, white, 95%);
-$overlay-light: mix($dark-grey, white, 86%);</p>
-
-<p>EKAM’S FASTPAGES BLOG</p>
+        <div class="home"><h1 id="ekams-fastpages-blog">EKAM’S FASTPAGES BLOG</h1>
 
 <h1 id="posts">Posts</h1>
 
