--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ window.onload = wrap_img;
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home"><h1 id="ekams-fastpages-blog-">EKAM’S FASTPAGES BLOG :)</h1>
+<p><img src="https://i.pinimg.com/originals/83/ce/1e/83ce1e01b27c36bc241948cb3c2c555f.jpg" alt="This is an image" /></p>
 
 <h1 id="posts">Posts</h1>
 
