--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@ search_exclude: true
 image: images/logo.png
 ---
 
+<html>
+<body style ="background-color:rgb(147,199,191)"
+< /body >
+< /html >
+  
 # EKAM'S FASTPAGES BLOG :)
 ![This is an image](https://i.pinimg.com/originals/83/ce/1e/83ce1e01b27c36bc241948cb3c2c555f.jpg)
 
