deploy: cf94b8ddfc0ba3be0809f4671ddc5d6c2ba3982f

--- a/index.html
+++ b/index.html
@@ -72,17 +72,14 @@ window.onload = wrap_img;
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home"><html>
-&lt;body style ="background-color:rgb(147,199,191)"
-&lt; /body &gt;
-&lt; /html &gt;
-  
-# EKAM'S FASTPAGES BLOG :)
-![This is an image](https://i.pinimg.com/originals/83/ce/1e/83ce1e01b27c36bc241948cb3c2c555f.jpg)
-
-
-
-# Posts
+<body style="background-color:rgb(147, 199, 191);">
+</body>
 </html>
+
+<h1 id="ekams-fastpages-blog-">EKAM’S FASTPAGES BLOG :)</h1>
+<p><img src="https://i.pinimg.com/originals/83/ce/1e/83ce1e01b27c36bc241948cb3c2c555f.jpg" alt="This is an image" /></p>
+
+<h1 id="posts">Posts</h1>
 
 
 
