--- a/index.html
+++ b/index.html
@@ -13,5 +13,33 @@ image: images/logo.png
 ![This is an image](https://i.pinimg.com/originals/83/ce/1e/83ce1e01b27c36bc241948cb3c2c555f.jpg)
 
 
+<table>
+  <tr>
+    <th>Week 0</th>
+    <th>Week 1</th>
+    <th>Week 2</th>
+  </tr>
+  <tr>
+    <td>Ekam Kaire</td>
+    <td>CHANGE</td>
+    <td>CHANGE</td>
+  </tr>
+  <tr>
+    <td>Shreyas Sarurkar</td>
+    <td>CHANGE</td>
+    <td>CHANGE</td>
+  </tr>
+  </tr>
+  <tr>
+    <td>Ishi Singh</td>
+    <td>CHANGE</td>
+    <td>CHANGE</td>
+  </tr>
+  <tr>
+    <td>Lily Wu</td>
+    <td>CHANGE</td>
+    <td>CHANGE</td>
+  </tr>
+</table>
 
 # Posts
