--- a/index.html
+++ b/index.html
@@ -79,6 +79,35 @@ window.onload = wrap_img;
 <h1 id="ekams-fastpages-blog-">EKAM’S FASTPAGES BLOG :)</h1>
 <p><img src="https://i.pinimg.com/originals/83/ce/1e/83ce1e01b27c36bc241948cb3c2c555f.jpg" alt="This is an image" /></p>
 
+<table>
+  <tr>
+    <th>Week 0</th>
+    <th>Week 1</th>
+    <th>Week 2</th>
+  </tr>
+  <tr>
+    <td>Ekam Kaire</td>
+    <td>CHANGE</td>
+    <td>CHANGE</td>
+  </tr>
+  <tr>
+    <td>Shreyas Sarurkar</td>
+    <td>CHANGE</td>
+    <td>CHANGE</td>
+  </tr>
+  &lt;/tr&gt;
+  <tr>
+    <td>Ishi Singh</td>
+    <td>CHANGE</td>
+    <td>CHANGE</td>
+  </tr>
+  <tr>
+    <td>Lily Wu</td>
+    <td>CHANGE</td>
+    <td>CHANGE</td>
+  </tr>
+</table>
+
 <h1 id="posts">Posts</h1>
 
 
