--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ image: images/logo.png
 # EKAM'S FASTPAGES BLOG :)
 ![This is an image](https://i.pinimg.com/originals/83/ce/1e/83ce1e01b27c36bc241948cb3c2c555f.jpg)
 
+# Work done by Week
 
 <style type="text/css">
   table          {border:outset 1; width:150%;}
@@ -43,7 +44,7 @@ image: images/logo.png
     <td>add later</td>
     <td>add later</td>
   </tr>
-<table>
+</table>
 
 
 
