deploy: 801cff84ccc7bc6114120d10fcaf940b1242c33c

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@ window.onload = wrap_img;
 <h1 id="ekams-fastpages-blog-">EKAM’S FASTPAGES BLOG :)</h1>
 <p><img src="https://i.pinimg.com/originals/83/ce/1e/83ce1e01b27c36bc241948cb3c2c555f.jpg" alt="This is an image" /></p>
 
+<h1 id="work-done-by-week">Work done by Week</h1>
+
 <style type="text/css">
   table          {border:outset 1; width:150%;}
   table td       {border:inset 1;}
@@ -109,12 +111,12 @@ window.onload = wrap_img;
     <td>add later</td>
     <td>add later</td>
   </tr>
-<table>
+&lt;/table&gt;
 
 
 
 # Posts
-</table></tr></table>
+</tr></table>
 
 
 
