--- a/_pages/tags.html
+++ b/_pages/tags.html
@@ -5,6 +5,11 @@ title: Tags
 search_exclude: true
 ---
 
+<html>
+<body style="background-color:rgb(147, 199, 191);">
+</body>
+</html>
+
 {% if site.categories.size > 0 %}
 <h2>Contents</h2>
 
