--- a/search/index.html
+++ b/search/index.html
@@ -69,7 +69,12 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <!-- adapted from https://github.com/pmarsceill/just-the-docs -->
+        <html>
+<body style="background-color:rgb(147, 199, 191);">
+</body>
+</html>
+
+<!-- adapted from https://github.com/pmarsceill/just-the-docs -->
 <script type="text/javascript" src="/fast-pages/assets/js/search.js"></script>
 <script type="text/javascript" src="/fast-pages/assets/js/vendor/lunr.min.js"></script>
 
