deploy: 4b9011dc2b33ba62d1d765ab7ee50d99892133d2

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ window.onload = wrap_img;
 
 <h1 id="ekams-fastpages-blog-">EKAM’S FASTPAGES BLOG :)</h1>
 
-<p>Testing</p>
+<p>test:</p>
 
 <p><img src="https://i.pinimg.com/originals/83/ce/1e/83ce1e01b27c36bc241948cb3c2c555f.jpg" alt="This is an image" /></p>
 
