--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ image: images/logo.png
 
 # EKAM'S FASTPAGES BLOG :)
 
-test:
+test: permanant change 
 
 ![This is an image](https://i.pinimg.com/originals/83/ce/1e/83ce1e01b27c36bc241948cb3c2c555f.jpg)
 
