--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/fast-pages/about/">About Me</a><a class="page-link" href="/fast-pages/search/">Search</a><a class="page-link" href="/fast-pages/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/fast-pages/about/">About Me</a><a class="page-link" href="/fast-pages/java/">JavaScript Jupyter</a><a class="page-link" href="/fast-pages/search/">Search</a><a class="page-link" href="/fast-pages/categories/">Tags</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
