--- a/_pages/java.html
+++ b/_pages/java.html
@@ -4,6 +4,5 @@ title: JavaScript Jupyter
 permalink: /java/
 ---
 
-link to JavaScript table: 
-link to personal usage of JavaScript: 
+link to personal usage of JavaScript: https://ekamjot-kaire.github.io/fast-pages/2022/09/26/javascriptusage.html
 
