--- a/_pages/java.html
+++ b/_pages/java.html
@@ -4,5 +4,6 @@ title: JavaScript Jupyter
 permalink: /java/
 ---
 
+link to JavaScript Table: https://ekamjot-kaire.github.io/fast-pages/2022/09/28/javascipt-table.html
 link to personal usage of JavaScript: https://ekamjot-kaire.github.io/fast-pages/2022/09/26/javascriptusage.html
 
