--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@ image: images/logo.png
   <tr>
     <td> none </td>
     <td> none </td>
-    <td> nothing yet </td>
+    <td><a href ="https://ekamjot-kaire.github.io/fast-pages/2022/09/28/javascipt-table.html"> JavaScript Table </a></td>
   </tr>
 
