--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ image: images/logo.png
   </tr>
   <tr>
     <td><a href ="https://ekamsflask.tk/"> Personal Flask</a></td>
-    <td><a href ="https://ekamjot-kaire.github.io/fast-pages/techtalk/rapidapi"> Tech Talk: APIs </td>
+    <td><a href ="https://ekamjot-kaire.github.io/fast-pages/techtalk/rapidapi"> Tech Talk: APIs </a> </td>
     <td> nothing yet </td>
   </tr>
 
