--- a/page2/index.html
+++ b/page2/index.html
@@ -175,12 +175,12 @@ window.onload = wrap_img;
   </tr>
   <tr>
     <td><a href="https://ekamsflask.tk/"> Personal Flask</a></td>
-    <td><a href="https://ekamjot-kaire.github.io/fast-pages/techtalk/rapidapi"> Tech Talk: APIs &lt;/td&gt;
+    <td><a href="https://ekamjot-kaire.github.io/fast-pages/techtalk/rapidapi"> Tech Talk: APIs </a> </td>
     <td> nothing yet </td>
-  &lt;/tr&gt;
+  </tr>
 
 
-</a></td></tr></tr></table></table></tr></table>
+</tr></table></table></tr></table>
 
 
 
