--- a/index.html
+++ b/index.html
@@ -110,5 +110,9 @@ image: images/logo.png
     <td><a href ="https://ekamjot-kaire.github.io/fast-pages/techtalk/rapidapi"> Tech Talk: APIs </a> </td>
     <td> nothing yet </td>
   </tr>
-
+  <tr>
+    <td>none</td>
+    <td><a href ="https://ekamjot-kaire.github.io/fast-pages/collegeboard/error"> Tech Talk: Correcting Errors </a> </td>
+    <td> nothing yet </td>
+  </tr>
 
