--- a/page2/index.html
+++ b/page2/index.html
@@ -178,7 +178,11 @@ window.onload = wrap_img;
     <td><a href="https://ekamjot-kaire.github.io/fast-pages/techtalk/rapidapi"> Tech Talk: APIs </a> </td>
     <td> nothing yet </td>
   </tr>
-
+  <tr>
+    <td>none</td>
+    <td><a href="https://ekamjot-kaire.github.io/fast-pages/collegeboard/error"> Tech Talk: Correcting Errors </a> </td>
+    <td> nothing yet </td>
+  </tr>
 
 </tr></table></table></tr></table>
 
