deploy: af4a5bd4daaabe177ad87e5049c038b0d1cdd138

--- a/collegeboard/error.html
+++ b/collegeboard/error.html
@@ -554,6 +554,7 @@ window.onload = wrap_img;
     <span class="n">total</span> <span class="o">=</span> <span class="n">total</span> <span class="o">+</span> <span class="n">menu</span><span class="p">[</span><span class="s2">&quot;drink&quot;</span><span class="p">]</span>
     
 <span class="c1">#code should add the price of the menu items selected by the user </span>
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;your total is:&quot;</span><span class="p">)</span>
 <span class="nb">print</span><span class="p">(</span><span class="n">total</span><span class="p">)</span>
 </pre></div>
 
@@ -571,7 +572,8 @@ window.onload = wrap_img;
 burger  $3.99
 fries  $1.99
 drink  $0.99
-1.99
+your total is:
+3.99
 </pre>
 </div>
 </div>
