--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ image: images/logo.png
 
 # EKAM'S FASTPAGES BLOG :)
 
-![This is an image](https://i.pinimg.com/originals/83/ce/1e/83ce1e01b27c36bc241948cb3c2c555f.jpg)
+![](https://i.pinimg.com/originals/83/ce/1e/83ce1e01b27c36bc241948cb3c2c555f.jpg)
 
 # Work done by Week
 
@@ -108,11 +108,11 @@ image: images/logo.png
   <tr>
     <td><a href ="https://ekamsflask.tk/"> Personal Flask</a></td>
     <td><a href ="https://ekamjot-kaire.github.io/fast-pages/techtalk/rapidapi"> Tech Talk: APIs </a></td>
-    <td> nothing yet </td>
+    <td> none </td>
   </tr>
   <tr>
     <td>none</td>
     <td><a href ="https://ekamjot-kaire.github.io/fast-pages/collegeboard/error"> Tech Talk: Correcting Errors </a></td>
-    <td> nothing yet </td>
+    <td> none </td>
   </tr>
 
