--- a/page2/index.html
+++ b/page2/index.html
@@ -79,7 +79,7 @@ window.onload = wrap_img;
 
 <h1 id="ekams-fastpages-blog-">EKAM’S FASTPAGES BLOG :)</h1>
 
-<p><img src="https://i.pinimg.com/originals/83/ce/1e/83ce1e01b27c36bc241948cb3c2c555f.jpg" alt="This is an image" /></p>
+<p><img src="https://i.pinimg.com/originals/83/ce/1e/83ce1e01b27c36bc241948cb3c2c555f.jpg" alt="" /></p>
 
 <h1 id="work-done-by-week">Work done by Week</h1>
 
@@ -176,12 +176,12 @@ window.onload = wrap_img;
   <tr>
     <td><a href="https://ekamsflask.tk/"> Personal Flask</a></td>
     <td><a href="https://ekamjot-kaire.github.io/fast-pages/techtalk/rapidapi"> Tech Talk: APIs </a></td>
-    <td> nothing yet </td>
+    <td> none </td>
   </tr>
   <tr>
     <td>none</td>
     <td><a href="https://ekamjot-kaire.github.io/fast-pages/collegeboard/error"> Tech Talk: Correcting Errors </a></td>
-    <td> nothing yet </td>
+    <td> none </td>
   </tr>
 
 </tr></table></table></tr></table>
