--- a/index.html
+++ b/index.html
@@ -163,12 +163,15 @@ image: images/logo.png
     table td#CELL3 {width:50%;}
   </style>
  
-<strong><a href ="teamberries.tk"> Final Project </a></strong>
+
+# <a href ="teamberries.tk"> Final Project </a>
+
+
   <table>
     <tr>
       <th> Final Week</th>
       <th><a href ="https://ekamjot-kaire.github.io/fast-pages/2022/11/04/natm.html"> Night @ The Museum Blog</a></th>
-      <th></th>
+      <th><a href ="https://ekamjot-kaire.github.io/fast-pages/2022/11/07/final.html"> Final Corrections</a></th>
     </tr>
 
       
