--- a/index.html
+++ b/index.html
@@ -164,9 +164,6 @@ image: images/logo.png
   </style>
  
 
-# <a href ="teamberries.tk"> Final Project </a>
-
-
   <table>
     <tr>
       <th> Final Week</th>
@@ -174,5 +171,7 @@ image: images/logo.png
       <th><a href ="https://ekamjot-kaire.github.io/fast-pages/2022/11/07/final.html"> Final Corrections</a></th>
     </tr>
 
+
+<strong><a href ="teamberries.tk"> Final Project </a></strong>
       
   
