--- a/lesson9-11.html
+++ b/lesson9-11.html
@@ -1227,9 +1227,7 @@ len(list1)  1 and mid as 0.</p>
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#all generated #s in the flowchart are randomly generated between 0 and 2... the flowchart also does not include print statements</span>
-
-<span class="nb">print</span><span class="p">(</span><span class="s2">"This game will generate 3 random numbers (each between 0 and 20) for each round and will print the highest number. Try to get as high as possible!"</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="nb">print</span><span class="p">(</span><span class="s2">"This game will generate 3 random numbers (each between 0 and 20) for each round and will print the highest number. Try to get as high as possible!"</span><span class="p">)</span>
 
 <span class="kn">import</span> <span class="nn">random</span> 
 
