--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ image: images/logo.png
     <td>nothing yet </td>
   </tr>
   <tr>
-    <td>nothing yet </td>
+    <td>Section 3.6 -- Simulations</td>
     <td>nothing yet </td>
     <td>nothing yet </td>
   </tr>
