--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ image: images/logo.png
     <td>nothing yet </td>
   </tr>
   <tr>
-    <td>nothing yet </td>
+    <td><a href="https://ekamjot-kaire.github.io/fast-pages/lesson"> Sections 3.17 and 3.18 -- Algorithm Efficiency and Undecidable Problems</a> </td>
     <td>nothing yet </td>
     <td>nothing yet </td>
   </tr>
