deploy: 27ee394686c7000e1bf3af1910b7f53f1b017dd7

--- a/page2/index.html
+++ b/page2/index.html
@@ -147,7 +147,7 @@ window.onload = wrap_img;
     <td>nothing yet </td>
   </tr>
   <tr>
-    <td>nothing yet </td>
+    <td><a href="https://ekamjot-kaire.github.io/fast-pages/lesson"> Sections 3.17 and 3.18 -- Algorithm Efficiency and Undecidable Problems</a> </td>
     <td>nothing yet </td>
     <td>nothing yet </td>
   </tr>
