deploy: e9a00756d01888972562cbc27de8c7abf61e143b

--- a/jupyter/libraries.html
+++ b/jupyter/libraries.html
@@ -645,7 +645,7 @@ derivative of (13x^4 + 4x^2) / 2 when x=9:
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/fast-pages/feed.xml">
+          <a href="https://ekamjot-kaire.github.io/fast-pages/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/fast-pages/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
