--- a/lesson.html
+++ b/lesson.html
@@ -155226,7 +155226,7 @@ File <span class="ansi-green-fg">/Library/Frameworks/Python.framework/Versions/3
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/fast-pages/feed.xml">
+          <a href="https://ekamjot-kaire.github.io/fast-pages/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/fast-pages/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
