--- a/lesson4.html
+++ b/lesson4.html
@@ -1492,7 +1492,7 @@ A         H
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/fast-pages/feed.xml">
+          <a href="https://ekamjot-kaire.github.io/fast-pages/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/fast-pages/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
