--- a/techtalk/rapidapi.html
+++ b/techtalk/rapidapi.html
@@ -568,7 +568,7 @@ Did you insert a valid key in X-RapidAPI-Key of API cell above?
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/fast-pages/feed.xml">
+          <a href="https://ekamjot-kaire.github.io/fast-pages/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/fast-pages/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
