--- a/_pages/tri3_planning.html
+++ b/_pages/tri3_planning.html
@@ -48,7 +48,7 @@ permalink: /project/
     </style>
     
 
-    <HTML>
+    <html>
         <style>
         /* top bar (black) -- add buttons to go back to escape room + leaderboard */ 
             .menu { 
