deploy: d21c0abe41b263e446127422c387036633ca9244

--- a/project/index.html
+++ b/project/index.html
@@ -120,7 +120,7 @@ window.onload = wrap_img;
     </style>
     
 
-    <HTML>
+    <html>
         <style>
         /* top bar (black) -- add buttons to go back to escape room + leaderboard */ 
             .menu { 
