--- a/_pages/plan.html
+++ b/_pages/plan.html
@@ -1,8 +1,3 @@
----
-layout: page
-title: Tri 3 Plan
-permalink: /tri3Plan/
----
 <!DOCTYPE html>
 <html>
   <head>
@@ -31,22 +26,22 @@ permalink: /tri3Plan/
       
       .questions-completed{
         display: inline-block;
-        width: 50%;
+        position: relative;
         font-size: 20px;
         font-family: 'Orbitron', sans-serif;
         margin-top: 25px;
         color: white;
-        text-align: left;
+        vertical-align: left;
       }
 
       .time-elapsed {
         display: inline-block;
         position: relative;
-        left: 30%;
+        left: 60%;
         padding: 0px;
         font-size: 20px;
         font-family: 'Orbitron', sans-serif;
-        margin-top: 25px;
+        margin-top: -10px;
         color: white;
         text-align: right;
         vertical-align: right;
@@ -119,7 +114,7 @@ permalink: /tri3Plan/
       }
       
       .image-container {
-        margin-top: 30px;
+        top: 20px;
         position: relative;
         width: 100%;
       }
@@ -133,7 +128,7 @@ permalink: /tri3Plan/
         display: flex;
         flex-wrap: wrap;
         align-items: flex-end;
-        margin-top: 30px;
+        margin-top: -10px;
         width: 400px;
         margin-left: 850px;
       }
@@ -256,7 +251,7 @@ permalink: /tri3Plan/
       .car1 {
         width: 200px;
         height: auto;
-        margin-top: 0px;
+        top: -40px;
         position: absolute;
         animation: moveRight 5s linear infinite;
         animation-play-state: paused;
@@ -283,14 +278,20 @@ permalink: /tri3Plan/
         <div class="menu-button">Back to Escape Room</div>
       </div>
       <div class="top-container">
-        <div class="questions-completed">QUESTIONS COMPLETED: 2/10</div>
-        <div class="time-elapsed">TIME: 00:45</div>
+        <p>
+          <div class="questions-completed">QUESTIONS COMPLETED: </div>
+          <div id="questions" class="questions-completed"> 0</div>
+          <div class="questions-completed">/ 10</div>
+          <div class="time-elapsed">TIME : </div> 
+          <div class="time-elapsed" id="seconds">00 :</div> 
+          <div class="time-elapsed" id="mins">00</div>
+        </p>
       </div>
       <div class="progressbar">
         <div class="inner"></div>
       </div>
       <div class="image-container">
-        <img src="https://user-images.githubusercontent.com/111466888/229846875-9f4a1691-6b9e-4d96-ae85-5c799719e2e2.jpeg" alt="road">
+        <img src="https://user-images.githubusercontent.com/111466888/233432935-cffdfbb6-4aad-47c4-8e4d-bb9eedb85a90.png" alt="road">
         <img class="car1" src="https://user-images.githubusercontent.com/111466888/232831777-139bd1ff-eab8-4503-ab56-1c4b37dd58ad.png">
       </div>
       <div class="button-container">
@@ -307,15 +308,66 @@ permalink: /tri3Plan/
       const car1 = document.querySelector(".car1");
       const startButton = document.querySelector("#start-button");
       const button1 = document.querySelector("#answer-button1");
+
+      let seconds = 0;
+      let mins = 0;
+      let questions = 0;
+      const appendMins = document.getElementById("mins");
+      let Interval;
+      const appendSeconds = document.getElementById("seconds");
+      const appendQ = document.getElementById("questions");
+
       let keyframeIndex = 0;
       function barMove() {
-        keyframeIndex = keyframeIndex + 1;
-        const animationDuration = 5
-        progressBar.style.animation = `progressbar-countdown ${animationDuration}s 1 forwards`;
-        progressBar.style.animationPlayState = "running";
+        if (keyframeIndex < 10) { // limit to 10 keyframes
+          const animationDuration = 5;
+          progressBar.style.animation = `progressbar-countdown ${animationDuration}s forwards`;
+          progressBar.style.animationPlayState = "running";
+          progressBar.style.animationIterationCount = 1;
+          progressBar.style.animationTimingFunction = "linear";
+          progressBar.style.width = `${(keyframeIndex + 1) * 10}%`;
+          setTimeout(function() {
+            progressBar.style.animationPlayState = "paused";
+          }, 500); 
+          keyframeIndex++;
+        }
         car1.style.animationName = "moveRight";
         car1.style.animationPlayState = "running";
-
+        clearInterval(Interval);
+        Interval = setInterval(startTimer, 10);
+        addQuestion();
+        if (questions === 10) {
+          button1.onclick = function() {
+            questions = 10;
+            appendQ.innerHTML = questions;
+          }
+        }
       }
+
+      function startTimer () {
+        mins++; 
+        if(mins <= 9){
+          appendMins.innerHTML = "0" + mins;
+        }
+        if (mins > 9){
+          appendMins.innerHTML = mins;
+        } 
+        if (mins > 99) {
+          console.log("seconds");
+          seconds++;
+          appendSeconds.innerHTML = "0" + seconds;
+          mins = 0;
+          appendMins.innerHTML = "0" + 0;
+        }
+        if (seconds > 9){
+          appendSeconds.innerHTML = seconds;
+        }
+      }
+
+      function addQuestion () { 
+        questions++;
+        appendQ.innerHTML = questions;
+      }
+
   </script>
     </html>
