--- a/tri1/index.html
+++ b/tri1/index.html
@@ -64,7 +64,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/fast-pages/about/">About Me</a><a class="page-link" href="/fast-pages/java/">JavaScript Jupyter</a><a class="page-link" href="/fast-pages/tri3Plan/">Tri 3 Plan</a><a class="page-link" href="/fast-pages/search/">Search</a><a class="page-link" href="/fast-pages/categories/">Tags</a><a class="page-link" href="/fast-pages/tri1/">Tri 1</a><a class="page-link" href="/fast-pages/tri2/">Tri 2</a></div>
+        <div class="trigger"><a class="page-link" href="/fast-pages/about/">About Me</a><a class="page-link" href="/fast-pages/java/">JavaScript Jupyter</a><a class="page-link" href="/fast-pages/search/">Search</a><a class="page-link" href="/fast-pages/categories/">Tags</a><a class="page-link" href="/fast-pages/tri1/">Tri 1</a><a class="page-link" href="/fast-pages/tri2/">Tri 2</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
